<resources>
    <string name="app_name">Lab4</string>
    <string name="DiaCumple">Viernes</string>
    <string name="FechaCumple">11 de Marzo</string>
    <string name="TextBtn1">Terminar Jornada</string>
    <string name="NombreRestaurante">CastorsPizza</string>
    <string name="DireccionRestaurante">Centro Comercial Sankris Mall</string>
    <string name="HorarioRestaurante">11:00-21:00</string>
    <string name="TextoBtn2">Iniciar</string>
    <string name="Actualizacion">Actualización disponible</string>
    <string name="Descargar">Descargar</string>
    <string name="Detalles">Detalles</string>
    <string name="MiNombre">Daniel Esteban Morales Urizar</string>
</resources>